syntax = "proto3";
package zhihu.cmdb.api.v1;
option java_package = "com.zhihu.cmdb.api.v1";
option go_package = "pkg/api/v1;v1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

message ObjectListRequest {
  string type = 1;
  ObjectView view = 2;
  string query = 3;
  string page_token = 4;
  int32 page_size = 5;
  bool show_deleted = 6;
}

message Object {
  string type = 1;
  string name = 2;
  string description = 3;
  string status = 4;
  string state = 5;
  google.protobuf.Timestamp create_time = 6;
  map<string, ObjectMeta> metas = 7;
}

message ObjectMeta {
  ValueType value_type = 1;
  string  value        = 2;
}

enum ValueType {
  STRING  = 0;
  INTEGER = 1;
  DOUBLE  = 2;
  BOOLEAN = 3;
}

message ObjectListResponse {
  string kind = 1;
  repeated Object objects = 2;
  string next_page_token = 3;
}

enum ObjectView {
  BASIC = 0;
  NORMAL = 1;
  RICH = 2;
}

service Objects {
  rpc List(ObjectListRequest) returns (ObjectListResponse){
      option (google.api.http) = {
      get: "/v1/api/objects/{type}"
    };
  };
}